# test-cpp-enterprise

./: .gitignore  CMakeLists.txt  FAILURE_SCENARIOS.md  PROJECT_COMPLETE.md  README.md  SETUP_GUIDE.md  setup-github.ps1
.github/workflows/: ci.yml  failure-scenarios.yml
include/: AllStubs.h  Application.h  Calculator.h  ConfigManager.h  ConnectionPool.h  DateTimeUtils.h  DistributedCache.h  JWTManager.h  LRUCache.h  Logger.h  OrderProcessor.h  QueryExecutor.h  StringHelper.h  StringUtils.h  TcpServer.h  Transaction.h
src/: Calculator.cpp  Logger.cpp  StringHelper.cpp  main.cpp  stubs.cpp
src/auth/: JWTManager.cpp  PasswordHasher.cpp  SessionManager.cpp
src/business/: InventoryManager.cpp  OrderProcessor.cpp  PaymentGateway.cpp
src/cache/: DistributedCache.cpp  LRUCache.cpp
src/core/: Application.cpp  ConfigManager.cpp  Logger.cpp
src/database/: ConnectionPool.cpp  QueryExecutor.cpp  Transaction.cpp
src/network/: HttpClient.cpp  TcpServer.cpp  WebSocketHandler.cpp
src/utils/: CryptoUtils.cpp  DateTimeUtils.cpp  StringUtils.cpp
tests/: test_calculator.cpp  test_connection_pool.cpp  test_integration.cpp  test_jwt_manager.cpp  test_logger.cpp  test_lru_cache.cpp  test_order_processor.cpp  test_string_helper.cpp  test_string_utils.cpp
